# geminid

./: Makefile.am  README  configure.ac
data/: Makefile.inc  geminid.service.in
m4/: geminid.m4
po/: LINGUAS  Makevars  es.po  es_MX.po  geminid.pot
src/: Makefile.inc  daemon.c  daemon.h  geminid.1  geminid.conf.5  main.c  parse.c  parse.h
