AC_INIT([geminid],
[m4_esyscmd([build-aux/git-version-gen .tarball-version])],
[https://github.com/dutch/geminid/issues], [],
[https://github.com/dutch/geminid])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign subdir-objects])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
